--- a/AlphaLi.Test/AlphaLi.Test.vcxproj
+++ b/AlphaLi.Test/AlphaLi.Test.vcxproj
@@ -180,6 +180,9 @@
     <ClCompile Include="Containers\random_iterator.test.cpp">
       <FileType>CppHeader</FileType>
     </ClCompile>
+    <ClCompile Include="util\static_for.test.cpp">
+      <FileType>CppHeader</FileType>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Designs\PubSub\pub_sub.test.cpp" />
@@ -196,6 +199,7 @@
     <Text Include="Containers\CMakeLists.txt" />
     <Text Include="Designs\CMakeLists.txt" />
     <Text Include="Designs\PubSub\CMakeLists.txt" />
+    <Text Include="util\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Designs\PubSub\CMakeLists.txt.bak" />
