--- a/AlphaLi.Test/util/CMakeLists.txt
+++ b/AlphaLi.Test/util/CMakeLists.txt
@@ -2,6 +2,7 @@
 SET(SOURCE
 	${SOURCE}
 	${CMAKE_CURRENT_SOURCE_DIR}/static_for.test.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/random.test.cpp
 	PARENT_SCOPE
 )
 
