Added secs_elapsed to timer
Also added test for exception on secs_elapsed call before timer.stop().

--- a/AlphaLi.Test/AlphaLi.Test.vcxproj
+++ b/AlphaLi.Test/AlphaLi.Test.vcxproj
@@ -181,6 +181,7 @@
       <FileType>CppHeader</FileType>
     </ClCompile>
     <ClCompile Include="util\random.test.cpp" />
+    <ClCompile Include="util\timer.test.cpp" />
     <ClCompile Include="util\static_for.test.cpp">
       <FileType>CppHeader</FileType>
     </ClCompile>
